# arithmetica-tui

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  a.out  install.sh  install_bleeding_edge.bat  install_bleeding_edge.sh  install_dependencies.sh  install_stable.bat  install_stable.sh
.github/workflows/: autorelease.yml  test.yml
src/: CMakeLists.txt  algebraic_number_class.hpp  algnum.cpp  algnum.hpp  arithmetica_tui.cpp  call_arithmetica_tui.cpp  constants.hpp  divide_with_steps.cpp  eval_with_steps.cpp  factor_polynomial.cpp  invert_matrix.cpp  main.cpp  matmul.cpp
src/functions/: functions.hpp
src/helpers/: center.cpp  check_for_implicit_eval.cpp  compare_printed_text.cpp  compare_text_without_ansi.cpp  get_console_width.cpp  get_matching_brace.cpp  get_printable_result.cpp  getch.cpp  helpers.hpp  is_valid_arithmetic_expression.cpp  print_eval_expression.cpp  print_expression.cpp  print_result.cpp  remove_extra_front_back_brackets.cpp  replace_all.cpp  round_decimal.cpp  tokenize.cpp
tests/: .gitignore  CMakeLists.txt  eval_tests.cpp  factor_tests.cpp  test_generator.cpp
